# d3d12-video-decode

./: .gitmodules  README.md  build.sh  main.c  meson.build  unfuck-mingw.h
